<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.sheridancollege.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_expense"
            app:destination="@id/nav_expense" />
        <action
            android:id="@+id/action_nav_home_to_nav_income"
            app:destination="@id/nav_income" />
        <action
            android:id="@+id/action_nav_home_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_expense"
        android:name="org.sheridancollege.expensetracker.ui.expense.ExpenseFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/nav_income"
        android:name="org.sheridancollege.expensetracker.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />
    <fragment
        android:id="@+id/summaryFragment"
        android:name="org.sheridancollege.expensetracker.SummaryFragment"
        android:label="fragment_summary"
        tools:layout="@layout/fragment_summary" />
</navigation>